deploy-kubernetes/guetta-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guetta
  namespace: guetta
spec:
  selector:
    matchLabels:
      app: guetta
  template:
    metadata:
      labels:
        app: guetta
    spec:
      containers:
      - name: guetta
        image: redbaty/guetta:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
