deploy-kubernetes/player-js-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-deployment
  namespace: guetta
spec:
  selector:
    matchLabels:
      app: player
  template:
    metadata:
      labels:
        app: player
    spec:
      containers:
      - name: player
        image: redbaty/guetta:player-js
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
