deploy-kubernetes/queue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guetta-queue
  namespace: guetta
spec:
  selector:
    matchLabels:
      app: guetta-queue
  template:
    metadata:
      labels:
        app: guetta-queue
    spec:
      containers:
      - name: queue-api
        image: redbaty/guetta-queue:latest
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
