deploy-kubernetes/player-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guetta-player-service
  namespace: guetta
spec:
  type: ClusterIP
  selector:
    app: player
  ports:
  - port: 80
    targetPort: 3000
