deploy-kubernetes/queue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guetta-queue-service
  namespace: guetta
spec:
  type: ClusterIP
  selector:
    app: guetta-queue
  ports:
  - port: 80
    targetPort: 80
